--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1303,3 +1303,7 @@ thead th.corner[scope=col] {
 div.advertisement-div > div {
 	height: 100% !important
   }
+
+.modal-dialog {
+	padding-bottom: 60px;
+}
