--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1119,10 +1119,10 @@ audio {
 }
 
 .form-control,
-.custom-select,
-.custom-select:disabled,
+.form-select,
+.form-select:disabled,
 .form-control:focus,
-.custom-select:focus {
+.form-select:focus {
 	background-color: var(--bg);
 	color:var(--text);
 	border-color: var(--border);
