--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -52,6 +52,6 @@
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23fff' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e")
 }
 
-.btn-close {
+:not(.alert) > .btn-close {
   filter: invert(1) grayscale(100%) brightness(200%);
 }
