fixed autocard layout

--- a/views/main.pug
+++ b/views/main.pug
@@ -38,10 +38,10 @@ html(lang='en')
 		#autocardPopup.d-none
 			.autocard-background
 				.row.g-0
-					.position-relative.card-border
+					.col.position-relative.card-border
 						img.foilOverlay(src='/content/foilOverlay.png')
 						img#autocardImageFront(src='', alt='')
-					.position-relative.card-border
+					.col.position-relative.card-border
 						img.foilOverlay(src='/content/foilOverlay.png')
 						img#autocardImageBack(src='', alt='')
 				#autocardTags.row.g-0.p-1
