--- a/public/css/dark.css
+++ b/public/css/dark.css
@@ -37,11 +37,11 @@
   --preview-article: rgba(116, 198, 135, 0.5);
   --preview-podcast:rgba(0, 0, 0, 0.6);
   --preview-video:  rgba(254, 66, 66, 0.5);
-  --nav-link: rgba(255,255,255,.5);
+  --text-secondary: rgba(255,255,255,.5);
   --button-green: #087715;
   --button-red: #bc1525;
-  --secondary-nav-link:rgba(255,255,255,.5);
-  --secondary-nav-link-hover:rgba(255,255,255,.8);
+  --secondary-text-secondary:rgba(255,255,255,.5);
+  --secondary-text-secondary-hover:rgba(255,255,255,.8);
   --dropdown-hover: #b6b8bb;
   --code-color:#fb7edc;
   --code-bg: rgb(43, 43, 43);
