--- a/public/css/default.css
+++ b/public/css/default.css
@@ -37,11 +37,11 @@
   --preview-article: rgba(116, 198, 135, 0.5);
   --preview-podcast:rgba(0, 0, 0, 0.6);
   --preview-video:  rgba(254, 66, 66, 0.5);
-  --nav-link: rgba(255,255,255,.5);
+  --text-secondary: rgba(255,255,255,.5);
   --button-green: #28a745;
   --button-red: #dc3545;
-  --secondary-nav-link:rgba(0,0,0,.5);
-  --secondary-nav-link-hover:rgba(0,0,0,.7);
+  --secondary-text-secondary:rgba(0,0,0,.5);
+  --secondary-text-secondary-hover:rgba(0,0,0,.7);
   --dropdown-hover: #16181b;
   --code-color:#d71d72;
   --code-bg: rgb(245, 245, 245);
