--- a/views/main.pug
+++ b/views/main.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en')
+html(lang='en' class=theme)
 	head
 		meta(charset='UTF-8')
 		meta(name='description', content='Build, playtest, and share your Magic the Gathering cube!')
@@ -15,9 +15,6 @@ html(lang='en')
 					meta(property=metadatum.property, content=metadatum.content)
 		link(rel='icon', href='/content/favicon.ico?v=1.1', type='image/x-icon')
 		title=title
-		//link(rel='stylesheet', href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
-		link(rel='stylesheet', href=bootstrap)
-		link(rel='stylesheet' href=colors)
 		link(rel='stylesheet' href='/css/autocomplete.css')
 		link(rel='stylesheet' href='/css/draft.css')
 		link(rel='stylesheet' href='/css/editcube.css')
