--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -8,9 +8,11 @@
     --bg: 255 255 255;
 		--bg-active: 233 233 233;
     --bg-secondary: 52 58 64;
+		--bg-accent: 244 244 244;
 		--text-secondary: 128 128 128;
 		--text-secondary-active: 255 255 255;
 		--border: 212 212 212;
+		--border-active : 180 180 180;
 		--text: 33 37 41;
 		--link: 0 123 255;
 		--link-active: 0 86 179;
@@ -25,15 +27,21 @@
 		--button-secondary: 108 117 125;
 		--button-secondary-active: 74 80 87;
 		--focus-ring: 3 102 214;
+		--advert: 251 241 185;
+		--article : 116 198 135;
+		--podcast: 0 0 0;
+		--video: 254 66 66;
   }
 
   :root[class~="dark"] {
     --bg: 52 58 64;
 		--bg-active: 74 80 87;
+		--bg-accent: 63 69 76;
     --bg-secondary: 36 41 46;
 		--text-secondary: 128 128 128;
 		--text-secondary-active: 255 255 255;
-		--border: 37 42 46;
+		--border: 45 51 56;
+		--border-active: 17 12 16;
 		--text: 255 255 255;
 		--link: 50 166 255;
 		--link-active: 0 86 179;
@@ -43,11 +51,15 @@
 		--button-success-active: 7 101 18;
 		--button-danger: 220 53 69;
 		--button-danger-active: 139 0 0;
-		--button-primary: 50 166 255;
-		--button-primary-active: 0 86 179;
+		--button-primary: 13 110 253;
+		--button-primary-active: 11 94 215;
 		--button-secondary: 108 117 125;
 		--button-secondary-active: 74 80 87;
 		--focus-ring: 3 102 214;
+		--advert: 91 90 64;
+		--article: 116 198 135;
+		--podcast: 0 0 0;
+		--video: 254 66 66;		
   }
 }
 
@@ -60,4 +72,12 @@
 	border-right: 0.3em solid transparent;
 	border-bottom: 0;
 	border-left: 0.3em solid transparent;
+}
+
+div.advertisement-div > div:not(.report-link) {
+	height: 100% !important
+}
+
+.advertisement-div {
+	height: 100%;
 }
